# Saya

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  train.py  visualize.py
configs/: cpu_fast.yaml  default.yaml
examples/: README.md  generate_examples.py
img_creator/: shadow_creator.html
research_papers/: 3d_print_improvements.md  neural_shadow_art.md
src/neural_shadow_art/: __init__.py  config.py  dataset.py  losses.py  mesh_export.py  model.py  registration.py  renderer.py  trainer.py
tests/: test_dataset.py  test_losses.py  test_mesh_export.py  test_model.py  test_registration.py  test_renderer.py  test_sanity.py
