[project]
name = "neural-shadow-art"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26",
    "Pillow>=10.0",
    "scikit-image>=0.22",
    "trimesh>=4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_shadow_art"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running end-to-end tests (deselect with '-m \"not slow\"')",
]
